<resources>
    <string name="app_name">Popular Movies</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="sort_by">Sort By</string>
    <string name="poster_image_view_cd">movie poster</string>
    <string name="star_iv_cd">star icon for rating</string>
    <string name="release_date_movie_label">Release Date:</string>
    <string name="cd_video_image">video image</string>
    <string name="cd_fav_button">favourite state toggle button</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="favourite">Favourite</string>
</resources>
