<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sort_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/sort_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_marginTop="10dp"
            android:textSize="30sp" />

    </RadioGroup>

</LinearLayout>