<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailsActivity">

        <ImageView
            android:id="@+id/poster_movie"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster_image_view_cd" />
        <!--TODO:add heart icon instead of star-->
        <ImageButton
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:onClick="favClicked"
            app:layout_constraintEnd_toEndOf="@+id/poster_movie"
            app:layout_constraintStart_toStartOf="@+id/poster_movie"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintTop_toBottomOf="@+id/poster_movie" />

        <TextView
            android:id="@+id/name_movie"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:text="Avengers Infinity Wars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_movie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rating_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:text="9.8"
            app:layout_constraintBottom_toBottomOf="@+id/star_image_rating"
            app:layout_constraintEnd_toStartOf="@+id/star_image_rating"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/poster_movie"
            app:layout_constraintStart_toStartOf="@+id/name_movie"
            app:layout_constraintTop_toTopOf="@+id/star_image_rating" />

        <TextView
            android:id="@+id/release_date_movie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/release_date_movie_label"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/rating_movie" />

        <TextView
            android:id="@+id/release_date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            tools:text="28/03/2018"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/release_date_movie_label" />

        <ImageView
            android:id="@+id/star_image_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/name_movie"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rating_movie"
            app:layout_constraintTop_toBottomOf="@+id/name_movie"
            app:srcCompat="@android:drawable/star_big_on"
            android:contentDescription="@string/star_iv_cd" />

        <android.support.v7.widget.CardView
            android:id="@+id/synopsis_movie_card"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardElevation="5dp"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fav_button">


            <TextView
                android:id="@+id/synopsis_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="textStart"
                tools:text="Synopsis of movie here" />


        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/video_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Videos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsis_movie_card" />

        <ListView
            android:id="@+id/video_lv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_label" />

        <TextView
            android:id="@+id/review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_lv" />

        <ListView
            android:id="@+id/review_lv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_label"
            android:layout_marginBottom="8dp"
            android:dividerHeight="8dp"
            tools:listitem="@layout/row_list_review" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
